<resources>
    <string name="app_name">MyCar Manager</string>
    <string name="registration_main">Sign-Up</string>
    <string name="welcome">WELCOME\!</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">SIGNUP</string>
    <string name="registration_helper_text">
        The password must be at least 8 characters long and
        must contain at least one uppercase letter, one
        lowercase letter, a number and a special
        character.
    </string>

    <string name="registration_main_subtext">
        Create an account to enjoy the convenience
    </string>

    <string name="registrationLink">
        <a href="">Don\'t have an account\? Signup\!</a>
    </string>

    <string name="login_link">
        <a href="">Already have an account\? Login\!</a>
    </string>

    <string name="tutorial_end">CONTINUE</string>

    <string name="connection_tutorial_welcome">
        Follow the instructions to
        connect your device to your car
    </string>

    <string name="connection_tutorial_first">
        Connect your ODB-II device to the ODB port located beneath
        the dashboard in your car
    </string>

    <string name="connection_tutorial_second">
        Turn on Bluetooth on your phone then press Continue
    </string>

    <string name="successfull_connection">
        Congratulations! You are now connected to your device!
    </string>

    <string name="failed_connection">
        Oops! Unable to establish a connection with your device.
    </string>

    <string name="failed_connection_bold">
        Connection Error: Unable to establish a connection.
        Please check your settings and try again.
    </string>

    <string name="loading_data_connection">
        Connection established! Loading your personal homepage\.\.\.
    </string>

    <string name="colour_blind_title">
        WHAT IS COLOUR BLINDNESS?
    </string>

    <string name="colour_blind_description">
        Color blindness results from retinal cone anomalies, causing difficulties in color perception,
        including confusion between specific colors or limited color recognition.
    </string>

    <string name="title_activity_garage">activity_garage</string>
    <string name="title_activity_car_garage">activity_car_garage</string>
    <string name="image_uploader">image_uploader</string>

</resources>
