<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#DDB892"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect Your Car"
                android:textSize="38sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center"/>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:src="@drawable/arc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EDE0D4">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_tutorial_welcome"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/one"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/connection_tutorial_first"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/odbexample"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/two"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/connection_tutorial_second"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tutorialEndButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Continue"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:backgroundTint="#66BB6A"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:strokeWidth="1dp"
                app:iconSize="24dp"
                app:icon="@drawable/chevron_right"
                app:iconGravity="end"
                app:iconTint="@color/black"
                android:layout_margin="36dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
