<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#DDB892"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Car"
                android:textSize="42sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manager"
                android:textSize="42sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Simplify car management with a touch"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:src="@drawable/arc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EDE0D4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="36sp"
                    android:layout_marginBottom="36dp"
                    android:textColor="@color/black"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    app:boxStrokeColor="@color/black"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Username"
                        android:background="@color/platinum"
                        android:textColor="@color/black">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:layout_marginBottom="24dp"
                    app:boxStrokeColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:background="@color/platinum"
                        android:textColor="@color/black">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:backgroundTint="#4CAF50"
                android:textColor="#000000"
                android:textSize="24dp"
                app:cornerRadius="10dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                app:icon="@drawable/login_icon"
                app:iconTint="@color/black"
                app:iconGravity="textStart"
                app:iconSize="28dp"/>

            <Button
                android:id="@+id/testButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="36dp"
                android:text="TEST BUTTON"
                android:backgroundTint="#FFC107"
                android:textColor="#000000"
                android:textSize="24sp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/signupLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/registrationLink"
                android:textColorLink="#000000"
                android:textSize="20dp"
                android:textAlignment="center"
                android:autoLink="all"
                android:linksClickable="true"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
